# SIT720_2026T1

./: .gitignore  README.md  main.py  pyproject.toml
Week_1-2/: week_1.ipynb
Week_1-2/data/: Untitled.ipynb  Untitled1.ipynb
Week_10/: Week_10.ipynb
Week_2-2/: sit720_students.csv  week_2.ipynb
Week_3/: kmeans_interactive.html  week_3.ipynb  week_3_kmean.ipynb  week_3_preliminary.ipynb
Week_3/data/: digitData3.csv
Week_4/: Week_4.ipynb
Week_5/: Week_5.ipynb
Week_5/data/: Advertising.csv  SIT720.3-Step1.08-foodtruck_profits.txt  data.xlsx
Week_6/: Week_6.ipynb
Week_7/Week_7/: Week_7-Copy1.ipynb  Week_7.ipynb  ovr.csv
Week_8/: Week_8.ipynb
